k8s/cicd-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serviceids
