k8s/travis-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  serviceids
