k8s/car-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-simulator
  labels:
    app: car-simulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-simulator
  template:
    metadata:
      labels:
        app: car-simulator
    spec:
      containers:
        - env:
            - name: AMQP_HOST
              value: amqp://rabbitmq
          image: iteam1337/pm-car-simulator
          name: car-simulator
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
