k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: postgres
  name: postgres
  namespace: predictivemovement
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
    spec:
      containers:
        - image: postgres:13
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: "/data"
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: "5Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: predictivemovement
  labels:
    app.kubernetes.io/name: postgres
spec:
  ports:
    - name: "5432"
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: postgres
