k8s/engine-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-server
spec:
  ports:
  - port: 4000
  type: LoadBalancer
  selector:
    app: engine-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-server
spec:
  selector:
    matchLabels:
      app: engine-server
  template:
    metadata:
      labels:
        app: engine-server
    spec:
      containers:
      - name: engine-server
        image: iteam1337/pm-engine-server
        ports:
        - containerPort: 4000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: engine-server-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - engine-server.iteamdev.io
    secretName: engine-server-prod-tls
  rules:
  - host: engine-server.iteamdev.io
    http:
      paths:
      - backend:
          serviceName: engine-server
          servicePort: 4000
