k8s/map.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: map
spec:
  replicas: 1
  selector:
    matchLabels:
      app: map
  template:
    metadata:
      labels:
        app: map
    spec:
      containers:
      - image: iteam1337/predictive-movement-map
        name: web
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always 
---
apiVersion: v1
kind: Service
metadata:
  name: map
  labels:
    app: map
spec:
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: map
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: map
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: map.iteamdev.se 
      http:
        paths:
          - backend:
              serviceName: map
              servicePort: 80
