k8s/match-route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-route
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: match-route
  template:
    metadata:
      labels:
        app: match-route
    spec:
      containers:
      - image: iteam1337/predictive-movement-match-route
        name: api
        imagePullPolicy: Always
        ports:
        - containerPort: 3030
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: match-route
  labels:
    app: match-route
spec:
  ports:
    - name: "80"
      protocol: TCP
      port: 80
      targetPort: 3030
  selector:
    app: match-route
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: match-route
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: match-route.pm.iteamdev.se
      http:
        paths:
          - backend:
              serviceName: match-route
              servicePort: 80
