k8s/pelias.yaml
---
# Source: pelias/templates/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pelias-dashboard-service
spec:
  selector:
    app: pelias-dashboard
  ports:
    - protocol: TCP
      port: 3030
  type: ClusterIP
---
# Source: pelias/templates/libpostal-service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pelias-libpostal-service
  namespace: predictivemovement
spec:
  selector:
    app: pelias-libpostal
  ports:
    - protocol: TCP
      port: 4400
  type: ClusterIP
---
# Source: pelias/templates/pip-service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pelias-pip-service
spec:
  selector:
    app: pelias-pip
  ports:
    - protocol: TCP
      port: 3102
  type: ClusterIP
---
# Source: pelias/templates/placeholder-service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pelias-placeholder-service
spec:
  selector:
    app: pelias-placeholder
  ports:
    - protocol: TCP
      port: 3000
  type: ClusterIP
---
# Source: pelias/templates/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-dashboard
  namespace: predictivemovement
spec:
  replicas: 1
  minReadySeconds: 1
  selector:
    matchLabels:
      app: pelias-dashboard
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-dashboard
    spec:
      containers:
        - name: pelias-dashboard
          image: pelias/dashboard:master
          resources:
            limits:
              memory: 0.2Gi
              cpu: "0.25"
            requests:
              memory: 0.2Gi
              cpu: "0.01"
---
# Source: pelias/templates/health-logger-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-elasticsearch-healthlogger
  namespace: predictivemovement
spec:
  replicas: 0
  minReadySeconds: 1
  selector:
    matchLabels:
      app: pelias-healthlogger
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-healthlogger
      annotations:
        image: pelias/elasticsearch-health-logger:master
        elasticsearch: elasticsearch
    spec:
      containers:
        - name: pelias-healthlogger
          image: pelias/elasticsearch-health-logger:master
          resources:
            limits:
              memory: 0.5Gi
              cpu: "0.5"
            requests:
              memory: "100Mi"
              cpu: "0.1"
---
# Source: pelias/templates/interpolation-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-interpolation
  namespace: predictivemovement
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: pelias-interpolation
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-interpolation
    spec:
      containers:
        - name: pelias-interpolation
          image: pelias/interpolation:master
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: config-volume
              mountPath: /etc/config
          resources:
            limits:
              memory: 3Gi
              cpu: "2"
              ephemeral-storage: 5Gi
            requests:
              memory: 2Gi
              cpu: "0.1"
              ephemeral-storage: 5Gi
      volumes:
        - name: data-volume
          emptyDir: {}
        - name: config-volume
          configMap:
            name: pelias-json-configmap
            items:
              - key: pelias.json
                path: pelias.json
---
# Source: pelias/templates/libpostal-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-libpostal
  namespace: predictivemovement
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: pelias-libpostal
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-libpostal
    spec:
      containers:
        - name: pelias-libpostal
          image: pelias/libpostal-service:master
          resources:
            limits:
              memory: 3Gi
              cpu: "1.5"
            requests:
              memory: 2Gi
              cpu: "0.1"
          livenessProbe:
            httpGet:
              path: /parse?address=readiness
              port: 4400
          readinessProbe:
            httpGet:
              path: /parse?address=readiness
              port: 4400
---
# Source: pelias/templates/pip-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-pip
  namespace: predictivemovement
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: pelias-pip
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-pip
    spec:
      containers:
        - name: pelias-pip
          image: pelias/pip-service:master
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
            - name: data-volume
              mountPath: /data
          resources:
            limits:
              memory: 10Gi
              cpu: "3"
              ephemeral-storage: 35Gi
            requests:
              memory: "5Gi"
              cpu: "0.1"
              ephemeral-storage: 35Gi
          readinessProbe:
            httpGet:
              path: /12/12
              port: 3102
            initialDelaySeconds: 300
      volumes:
        - name: config-volume
          configMap:
            name: pelias-json-configmap
            items:
              - key: pelias.json
                path: pelias.json
        - name: data-volume
          persistentVolumeClaim:
            claimName: pip-pvc
---
# Source: pelias/templates/placeholder-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-placeholder
  namespace: predictivemovement
spec:
  replicas: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: pelias-placeholder
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-placeholder
    spec:
      containers:
        - name: pelias-placeholder
          image: pelias/placeholder:master
          volumeMounts:
            - name: data-volume
              mountPath: /data
          resources:
            limits:
              memory: 1Gi
              cpu: "2"
              ephemeral-storage: 5Gi
            requests:
              memory: "512Mi"
              cpu: "0.1"
              ephemeral-storage: 5Gi
      volumes:
        - name: data-volume
          emptyDir: {}
---
# Source: pelias/templates/api-deployment.tpl
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pelias-api
  namespace: predictivemovement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pelias-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pelias-api
        app-group: pelias-api
      annotations:
        image: pelias/api:master
        checksum/config: 1faf321dba4e575e57fd4a89cfcd6c58cb0457befa55a1278cb666a6f23837f7
        elasticsearch: elasticsearch
    spec:
      containers:
        - name: pelias-api
          image: pelias/api:master
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
          resources:
            limits:
              memory: 0.5Gi
              cpu: "1.5"
            requests:
              memory: "0.25Gi"
              cpu: "0.1"
      volumes:
        - name: config-volume
          configMap:
            name: pelias-json-configmap
            items:
              - key: pelias.json
                path: pelias.json
        - name: data-volume
          configMap:
            name: pelias-data      
---
# Source: pelias/templates/api-service.tpl
apiVersion: v1
kind: Service
metadata:
  name: pelias-api-service
spec:
  selector:
    app-group: pelias-api
  ports:
    - name: http
      protocol: TCP
      port: 3100
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pelias-api
  namespace: predictivemovement
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - pelias.iteamdev.io
      secretName: pelias-prod-tls
  rules:
    - host: "pelias.iteamdev.io"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: pelias-api-service
              servicePort: http
